# veriform

./: .travis.yml  CHANGES.md  Cargo.toml  Makefile  README.md  ci.sh  codecov.yml  package.json
.github/workflows/: rust.yml  security_audit.yml
ci/: go.sh
examples/: zser_messages.toml
go/: README.md  ci.sh  decoder.go  object.go  object_test.go  parser.go  parser_test.go  varint.go  varint_test.go  veriform.go  zser.go  zser_test.go
js/: .gitignore  README.md  index.d.ts  index.js  index.ts  package.json  tsconfig.json  tslint.json
js/src/: decoder.ts  parser.ts  uint64.ts  varint.d.ts  varint.js  varint.ts  veriform.ts  verihash.ts  zhash.ts  zser.ts
js/test/: decoder.spec.ts  example_loader.ts  parser.spec.ts  uint64.spec.ts  varint.spec.ts  varint_examples.ts  verihash.spec.ts  zhash.spec.ts  zser.spec.ts  zser_test.js
js/test/support/: message_examples.ts  test_vectors.ts  varint_examples.ts  zhash_examples.ts
python/: README.md  requirements.txt  setup.py
python/tests/: message_examples.py  test_parser.py  test_varint.py  test_zser.py
python/tests/support/: message_examples.py  varint_examples.py
python/veriform/: __init__.py  decoder.py  exceptions.py  object.py  parser.py  varint.py
python/zser/: __init__.py  decoder.py  exceptions.py  object.py  parser.py  varint.py
ruby/: .gitignore  .rubocop.yml  .travis.yml  Gemfile  README.md  Rakefile  derp  veriform.gemspec  zser.gemspec
ruby/lib/: veriform.rb  zser.rb
ruby/lib/veriform/: decoder.rb  exceptions.rb  object.rb  parser.rb  varint.rb  verihash.rb  version.rb  zhash.rb
ruby/lib/zser/: decoder.rb  exceptions.rb  object.rb  parser.rb  varint.rb  version.rb  zhash.rb
ruby/spec/: spec_helper.rb  veriform_spec.rb  zser_spec.rb
ruby/spec/support/: message_examples.rb  varint_examples.rb  verihash_examples.rb  zhash_examples.rb
ruby/spec/veriform/: decoder_spec.rb  object_spec.rb  parser_spec.rb  varint_spec.rb  verihash_spec.rb  zhash_spec.rb
ruby/spec/zser/: decoder_spec.rb  object_spec.rb  parser_spec.rb  varint_spec.rb  zhash_spec.rb
rust/: CHANGES.md  Cargo.toml  README.md  ci.sh
rust/derive/: Cargo.toml
rust/derive/src/: digest.rs  field.rs  lib.rs  message.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzzers/: varint_fuzzer.rs
rust/src/: builtins.rs  decoder.rs  derive_helpers.rs  encoder.rs  error.rs  errors.rs  field.rs  lib.rs  message.rs  parser.rs  string.rs  value.rs  varint.rs  verihash.rs
rust/src/builtins/: tai64.rs  timestamp.rs  uuid.rs
rust/src/decoder/: body.rs  decodable.rs  event.rs  hasher.rs  header.rs  message.rs  sequence.rs  state.rs  trace.rs  traits.rs  value.rs  vint64.rs
rust/src/decoder/message/: body.rs  decoder.rs  hasher.rs  header.rs  state.rs  value.rs
rust/src/decoder/sequence/: decoder.rs  hasher.rs  iter.rs  state.rs
rust/src/field/: header.rs  length.rs  wire_type.rs
rust/tai64/: CHANGES.md  Cargo.toml  README.md
rust/tests/: derive.rs  examples.rs  lib.rs  message_examples.rs  test_vectors.rs  varint_examples.rs
rust/vint64/: CHANGES.md  Cargo.toml  README.md
rust/vint64/src/: error.rs  lib.rs  signed.rs
spec/: draft-veriform-spec.md  draft-zser-spec.md
vectors/: README.md  messages.tjson  varint.tjson  verihash.tjson
veriform.rs/: Cargo.toml  README.md
veriform.rs/fuzz/fuzzers/: varint_fuzzer.rs
veriform.rs/src/: decoder.rs  encoder.rs  error.rs  errors.rs  field.rs  lib.rs  message.rs  parser.rs  value.rs  varint.rs
veriform.rs/src/field/: length.rs
veriform.rs/tests/: lib.rs  test_vectors.rs
veriform.rs/vint64/: Cargo.toml
veriform.rs/vint64/src/: lib.rs
