[package]
name        = "veriform"
description = "Cryptographically verifiable data serialization format inspired by Protocol Buffers"
version     = "0.0.1"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/iqlusioninc/veriform/"
repository  = "https://github.com/iqlusioninc/veriform/tree/develop/rust/"
readme      = "README.md"
edition     = "2018"
categories  = ["authentication", "cryptography", "encoding"]
keywords    = ["hashing", "merkle", "protobufs", "security", "serialization"]

[dependencies]
displaydoc = { version = "0.1", default-features = false }
heapless = "0.5"
log = { version = "0.4", optional = true }
tai64 = { version = "3", optional = true, default-features = false }
uuid = { version = "0.8", optional = true, default-features = false }
vint64 = { version = "1", path = "vint64" }

[features]
default = ["builtins-std"]
alloc = []
builtins = ["tai64", "uuid"]
builtins-std = ["std", "tai64/std", "uuid/std"]
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
