[package]
name        = "veriform"
description = "Cryptographically verifiable data serialization format"
version     = "0.2.0"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/iqlusioninc/veriform/"
repository  = "https://github.com/iqlusioninc/veriform/tree/develop/rust/"
categories  = ["authentication", "cryptography", "encoding"]
keywords    = ["hashing", "merkle", "protobufs", "security", "serialization"]
readme      = "README.md"
edition     = "2018"

[dependencies]
digest = { version = "0.9", default-features = false }
displaydoc = { version = "0.2", default-features = false }
heapless = "0.6"
log = { version = "0.4", optional = true }
sha2 = { version = "0.10", optional = true, default-features = false }
tai64 = { version = "3", optional = true, default-features = false }
uuid = { version = "0.8", optional = true, default-features = false }
veriform_derive = { version = "0.2", optional = true, path = "derive" }
vint64 = { version = "1", path = "vint64" }

[features]
default = ["builtins-std", "sha2", "veriform_derive"]
alloc = []
builtins = ["tai64", "uuid"]
builtins-std = ["std", "tai64/std", "uuid/std"]
std = ["alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
