[package]
name        = "veriform"
description = "Cryptographically verifiable data serialization format inspired by Protocol Buffers"
version     = "0.0.0"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
repository  = "https://github.com/clasp-lang/veriform"
readme      = "README.md"
categories  = ["authentication", "cryptography", "encoding"]
keywords    = ["authentication", "cryptography", "security", "serialization", "merkle"]

[dependencies.byteorder]
version = "0.5"
default-features = false

[dev-dependencies]
data-encoding = "2.0.0-rc.1"
leb128 = "0"
serde_json = "1"

[features]
default = ["std"]
std = []
bench = []
