[package]
name        = "veriform"
description = "Cryptographically verifiable data serialization format inspired by Protocol Buffers"
version     = "0.0.0"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
repository  = "https://github.com/clasp-lang/veriform"
readme      = "README.md"
edition     = "2018"
categories  = ["authentication", "cryptography", "encoding"]
keywords    = ["authentication", "cryptography", "security", "serialization", "merkle"]

[dependencies]
vint64 = "0.1"

[features]
std = []
