[package]
name        = "veriform"
description = "Cryptographically verifiable data serialization format inspired by Protocol Buffers"
version     = "0.0.0"
license     = "Apache-2.0"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
repository  = "https://github.com/clasp-lang/veriform"
readme      = "README.md"
edition     = "2018"
categories  = ["authentication", "cryptography", "encoding"]
keywords    = ["authentication", "cryptography", "security", "serialization", "merkle"]

[dependencies]
vint64 = { version = "0.1", path = "vint64" }

[features]
default = ["std"]
alloc = []
std = ["alloc"]
