[package]
name        = "vint64"
description = "Simple and efficient variable-length integer encoding"
version     = "0.2.0" # Also update html_root_url in lib.rs when bumping this
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "Apache-2.0"
edition     = "2018"
homepage    = "https://github.com/iqlusioninc/veriform/"
repository  = "https://github.com/iqlusioninc/veriform/tree/develop/rust/vint64/"
readme      = "README.md"
categories  = ["no-std", "parser-implementations"]
keywords    = ["encoding", "integer", "leb128", "variable", "varint"]

[dev-dependencies]
criterion = "0.3"
criterion-cycles-per-byte = "0.1"

[[bench]]
name = "vint64"
harness = false
